export const snapshot = {};

snapshot[`after onRunStart 1`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 1`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onStepStart - Step that passes (1) 1`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onStepEnd - Step that passes (1) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (2) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (2) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (3) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (3) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunEnd 1`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunStart 2`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 2`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onStepStart - Step that passes (1) 2`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onStepEnd - Step that passes (1) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepError - Step that fails (2-2) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 1`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (3) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (3) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunEnd 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunStart 3`] = `
"TAP version 14
1..0
"
`;

snapshot[`after onRunEnd 3`] = `
"TAP version 14
1..0
"
`;

snapshot[`after onRunStart 4`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 3`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onStepStart - Step that passes (1) 3`] = `
"TAP version 14
1..3
"
`;

snapshot[`after onStepEnd - Step that passes (1) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 2`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (2) 2`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (2) 2`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 2`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (3) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (3) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 3`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunEnd 4`] = `
"TAP version 14
1..3
ok 1 - Simple passing scenario > Step that passes
ok 2 - Simple passing scenario > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunStart 5`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 4`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onStepStart - Step that passes (1) 4`] = `
"TAP version 14
1..4
"
`;

snapshot[`after onStepEnd - Step that passes (1) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepError - Step that fails (2-2) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 2`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepStart - Step that passes (3) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
"
`;

snapshot[`after onStepEnd - Step that passes (3) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 4`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunEnd 5`] = `
"TAP version 14
1..4
ok 1 - Simple passing scenario > Step that passes
ok 2 - Scenario with failing step > Step that passes
ok 3 - Simple passing scenario > Step that passes
"
`;

snapshot[`after onRunStart 6`] = `
"TAP version 14
1..0
"
`;

snapshot[`after onRunEnd 6`] = `
"TAP version 14
1..0
"
`;
